<resources>
    <string name="app_name">Alphametrica</string>
    <string name="message_text">Stay on the top of your finance</string>
    <string name="login">로그인</string>
    <string name="signup">가입하기</string>
    <string name="signup2">회원가입</string>
    <string name="forgot_password">비밀번호 찾기</string>
    <string name="no_account">계정이 없으신가요? <u>가입하기</u></string>
    <string name="email">Email</string>
    <string name="password">비밀번호</string>
    <string name="name">이름</string>
    <string name="mobile">휴대폰 번호</string>
    <string name="dob">생년월일</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="have_account">이미 계정이 있으신가요? <u>로그인</u></string>

    <string name="term">이용약관에 동의합니다</string>
    <string name="char_size">최소 8자 이상</string>
    <string name="one_upper_char">최소 하나의 대문자</string>
    <string name="one_number">최소 하나의 숫자</string>
    <string name="one_special">최소 하나의 특수문자</string>

</resources>
