<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgGradation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:src="@drawable/gradation"/>

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgGradation"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/signup2"
                android:textColor="@color/login_header"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/rlName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMessage"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="80dp">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvName"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:hint="Name"
                    android:lines="1"
                    android:textColor="@color/login_header"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/name"
                    android:textColor="@color/login_header"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/edtName"
                    android:layout_marginTop="10dp"
                    android:background="#16110D" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlName"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvMobile"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:hint="mobile number"
                    android:lines="1"
                    android:inputType="phone"
                    android:textColor="@color/login_header"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/tvMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/mobile"
                    android:textColor="@color/login_header"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/edtMobile"
                    android:layout_marginTop="10dp"
                    android:background="#16110D" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlMobile"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/tvDOBInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvDOB"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:hint="mm-dd-yyyy"
                    android:lines="1"
                    android:textColor="@color/login_header"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvDOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/dob"
                    android:textColor="@color/login_header"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/tvDOBInput"
                    android:layout_marginTop="10dp"
                    android:background="#16110D" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlDOB"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgEmail"
                    android:layout_below="@+id/tvEmail"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/imgEmail"
                    android:background="@android:color/transparent"
                    android:hint="sabahat@gmail.com"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:textColor="@color/login_header"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imgEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tvEmail"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="Email"
                    android:textColor="@color/login_header"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/edtEmail"
                    android:layout_marginTop="10dp"
                    android:background="#16110D" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlEmail"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPassword"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:hint="password"
                    android:lines="1"
                    android:password="true"
                    android:textColor="@color/login_header"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/password"
                    android:textColor="@color/login_header"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/edtPassword"
                    android:layout_marginTop="10dp"
                    android:background="#16110D" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlPassword"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvConfirmPassword"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:hint="confirm password"
                    android:lines="1"
                    android:password="true"
                    android:textColor="@color/login_header"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvConfirmPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/confirm_password"
                    android:textColor="@color/login_header"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/edtConfirmPassword"
                    android:layout_marginTop="10dp"
                    android:background="#16110D" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llPasswordCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlConfirmPassword"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgCharSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_unchecked" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/char_size"
                        android:textColor="#B7B7B7"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgOneUpperChar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_unchecked" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/one_upper_char"
                        android:textColor="#B7B7B7"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPasswordCheck2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llPasswordCheck"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgOneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_unchecked" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/one_number"
                        android:textColor="#B7B7B7"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgOneSpecial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_unchecked" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/one_special"
                        android:textColor="#B7B7B7"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/cbTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llPasswordCheck2"
                android:layout_marginTop="40dp"
                android:layout_toLeftOf="@+id/tvTerm"
                android:button="@drawable/xml_checkbox_selector"
                android:checked="false"
                android:text="" />

            <TextView
                android:id="@+id/tvTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/cbTerm"
                android:layout_below="@+id/llPasswordCheck2"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:text="@string/term"
                android:textColor="@color/text_message"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTerm"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/xml_dark_rounded_button_bg"
                android:gravity="center_horizontal"
                android:padding="7dp"
                android:text="@string/signup"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSignUp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/have_account"
                android:textColor="@color/text_message"
                android:textSize="14sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>