<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgGradation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/gradation"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgGradation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="@color/login_header"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/rlEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMessage"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Email"
            android:textColor="@color/login_header"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvEmail"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_email" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgEmail"
            android:layout_below="@+id/tvEmail"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imgEmail"
            android:background="@android:color/transparent"
            android:hint="sabahat@gmail.com"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/login_header"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/edtEmail"
            android:layout_marginTop="10dp"
            android:background="#16110D"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlEmail"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/password"
            android:textColor="@color/login_header"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imgPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvPassword"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_lock" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgPassword"
            android:layout_below="@+id/tvPassword"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:layout_toRightOf="@+id/imgPassword"
            android:password="true"
            android:background="@android:color/transparent"
            android:hint="password"
            android:lines="1"
            android:textColor="@color/login_header"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/edtPassword"
            android:layout_marginTop="10dp"
            android:background="#16110D"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rlPassword"
        android:layout_marginRight="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/forgot_password"
        android:textColor="@color/text_message"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvSignUp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/xml_dark_rounded_button_bg"
        android:gravity="center_horizontal"
        android:padding="7dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/no_account"
        android:textColor="@color/text_message"
        android:textSize="14sp" />

</RelativeLayout>